# EGSim

./: CMakeLists.txt  LICENSE  LICENSE_BSD  README.md
config/: config-osx.sh  config-template.sh
dep/: CMakeLists.txt
dep/blas/: CMakeLists.txt
dep/lapack/: CMakeLists.txt  lev2pchol.f
example/: cleanup.sh  run.sh
example/case118/: mkPlots.py
example/case300/: ieee300cdf.txt  mkPlots.py
src/: CMakeLists.txt  array1D.hpp  array2D.hpp  config.site  copyright.hpp  egsim.hpp  egsim_admmat.cpp  egsim_bus.hpp  egsim_g.cpp  egsim_io.cpp  egsim_ioIEEE.cpp  egsim_jac.cpp  egsim_line.hpp  egsim_main.cpp  egsim_newton.cpp  egsim_polar.cpp  egsim_pstruct.hpp
